--- a/_posts/2023-10-20-scholarship-project.html
+++ b/_posts/2023-10-20-scholarship-project.html
@@ -28,101 +28,27 @@ author: Vernon
                         <div class="row">
                             <div class="container">
                                 <h4 class="mt-0">{{ page.title }}</h4>
-                                <p>AEHCA Inc. has the ability to effect the conditions in which many
-                                    of the poverty stricken families have to live in. The most in
-                                    need are from the Indigenous population of Guatemala. 54% of the
-                                    population is considered Indigenous.
+                                <p>It’s hard to believe, but the third year of our scholarship program is drawing to a
+                                    close, and when the 4th year begins in January we will be at full rollout! We made
+                                    the commitment to Ipala at the start that we would add 5 scholarships each year
+                                    until we reach 20 and then maintain that number. It's just a few months till that
+                                    objective is met and we’ll be actively supporting 20 students (and their families
+                                    too!). Our target has always been to help good students that without some help would
+                                    be unlikely to find the means to go to college or other post-secondary schools.
+                                    That's what we’ve done and that is what we will continue to do!
                                 </p>
-                                <p>According to the UNICEF data, four out of 10 children under the
-                                    age of 5 suffer from poor nutrition. This issue is even worse for
-                                    the indigenous population since eight out of 10 children, or
-                                    double more than the average, suffer from the same problem.
-                                    Health-wise problems at an early age can affect growth, both
-                                    cognitively and physically. From 2010 to 2015, mortality in
-                                    children under 5 was 35 deaths a year per 1,000 live births.</p>
-                                <p>There are currently over 500,000 orphans in Guatemala and one
-                                    child is abandoned every 4 days. Vulnerable families are
-                                    especially in need of our support. Lacking support, safe work, or
-                                    daycare services, many families in Guatemala struggle to provide
-                                    adequate care for their children. </p>
-                                <h4 class="mt-0">How does our Organization support with health needs?</h4>
-                                <p>An important part of our health work is centered around improving
-                                    aspects of community health. Poor health may be a factor limiting
-                                    the abilities of families to access education, earn income and
-                                    participate in their communities. Our Community Health Program is
-                                    built on two elements: Nutrition and Shelter. The two most basic
-                                    needs. </p>
-                                <p>We provide food during the Covid-19 pandemic.</p>
-                                <p>We provide families with housing and efficient smokeless cookstoves
-                                    in an effort to reduce the prevalence of preventable disease. </p>
-                                <p>We provide support to a Seniors Center that provides health and
-                                    nutritional support to the elderly, at the same time connecting
-                                    them with younger members of the community. </p>
-                                <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
-                                <div class="col">
-                                    <div id="healthCarousel" class="carousel slide" data-ride="carousel">
-                                        <ol class="carousel-indicators">
-                                            <li data-target="#healthCarousel" data-slide-to="0" class="active"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="1"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="2"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="3"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="4"></li>
-                                        </ol>
-                                        <div class="carousel-inner">
-                                            <div class="carousel-item active">
-                                                <img src="/images/health-house-no-stove.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Home without Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-no-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stoveless - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-chimney-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Chimney - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Chimney for the smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-delivery-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Delivery - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Delivering the new smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Moving the new smokeless stove base
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a class="carousel-control-prev" href="#healthCarousel" role="button"
-                                            data-slide="prev">
-                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Previous</span>
-                                        </a>
-                                        <a class="carousel-control-next" href="#healthCarousel" role="button"
-                                            data-slide="next">
-                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Next</span>
-                                        </a>
-                                    </div>
-                                </div>
+                                <img src="/images/scholarship_list.png" width="50%" height="auto"
+                                    class="mr-3 pb-2 rounded"
+                                    alt="list of students that have received scholarship support">
+                                <p>The accumulated names may look like just a list, but….</p>
+                                <img src="/images/scholarship_students.png" width="80%" height="auto"
+                                    class="pb-2 rounded mx-auto d-block"
+                                    alt="a picture of Vernon and the scholarship students">
+                                <p>They’re all real people with real dreams of being teachers, business women,
+                                    architects, and a host of other occupations. Above we have “our guy in Guate” Vernon
+                                    Archer meeting with the new scholars for 2023 from left to right Melody, Jorge,
+                                    Marlon, Leslie and Dulce. They all said,</p>
+                                <p><i>“Thanks to all of you at AEHCA for helping to make our dreams come true!”</i></p>
                             </div>
                         </div>
                         <hr class="my-4">
