--- a/_posts/2023-10-21-flood-prone-support-project.html
+++ b/_posts/2023-10-21-flood-prone-support-project.html
@@ -28,101 +28,49 @@ author: Vernon
                         <div class="row">
                             <div class="container">
                                 <h4 class="mt-0">{{ page.title }}</h4>
-                                <p>AEHCA Inc. has the ability to effect the conditions in which many
-                                    of the poverty stricken families have to live in. The most in
-                                    need are from the Indigenous population of Guatemala. 54% of the
-                                    population is considered Indigenous.
+                                <p>In the spring of 2022 we learned from our partners in Ipala that many houses in a new
+                                    neighborhood, or “colonia” as they refer to it, were unprepared to prevent damages
+                                    from repeated flooding events. Our Vice-President Vernon Archer visited the site,
+                                    met with ACIDHER (our main partner in Ipala) and representatives of the
+                                    municipality. We analyzed the situation together and came up with some short term
+                                    measures to assist a few families to overcome the emergency situation and agreed to
+                                    keep working together to improve the situation seeking more mid and long term
+                                    solutions for the whole colonia.
                                 </p>
-                                <p>According to the UNICEF data, four out of 10 children under the
-                                    age of 5 suffer from poor nutrition. This issue is even worse for
-                                    the indigenous population since eight out of 10 children, or
-                                    double more than the average, suffer from the same problem.
-                                    Health-wise problems at an early age can affect growth, both
-                                    cognitively and physically. From 2010 to 2015, mortality in
-                                    children under 5 was 35 deaths a year per 1,000 live births.</p>
-                                <p>There are currently over 500,000 orphans in Guatemala and one
-                                    child is abandoned every 4 days. Vulnerable families are
-                                    especially in need of our support. Lacking support, safe work, or
-                                    daycare services, many families in Guatemala struggle to provide
-                                    adequate care for their children. </p>
-                                <h4 class="mt-0">How does our Organization support with health needs?</h4>
-                                <p>An important part of our health work is centered around improving
-                                    aspects of community health. Poor health may be a factor limiting
-                                    the abilities of families to access education, earn income and
-                                    participate in their communities. Our Community Health Program is
-                                    built on two elements: Nutrition and Shelter. The two most basic
-                                    needs. </p>
-                                <p>We provide food during the Covid-19 pandemic.</p>
-                                <p>We provide families with housing and efficient smokeless cookstoves
-                                    in an effort to reduce the prevalence of preventable disease. </p>
-                                <p>We provide support to a Seniors Center that provides health and
-                                    nutritional support to the elderly, at the same time connecting
-                                    them with younger members of the community. </p>
-                                <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
-                                <div class="col">
-                                    <div id="healthCarousel" class="carousel slide" data-ride="carousel">
-                                        <ol class="carousel-indicators">
-                                            <li data-target="#healthCarousel" data-slide-to="0" class="active"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="1"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="2"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="3"></li>
-                                            <li data-target="#healthCarousel" data-slide-to="4"></li>
-                                        </ol>
-                                        <div class="carousel-inner">
-                                            <div class="carousel-item active">
-                                                <img src="/images/health-house-no-stove.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Home without Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-no-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stoveless - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Home with soot from cooking without
-                                                        smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-chimney-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Chimney - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Chimney for the smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-delivery-1.jpg"
-                                                    class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove Delivery - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Delivering the new smokeless stove</p>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img src="/images/health-stove-1.jpg" class="d-block w-100 rounded"
-                                                    alt="Health - Smokeless Stove - Ipala, Guatemala">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <p class="text-light bg-dark">Moving the new smokeless stove base
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <a class="carousel-control-prev" href="#healthCarousel" role="button"
-                                            data-slide="prev">
-                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Previous</span>
-                                        </a>
-                                        <a class="carousel-control-next" href="#healthCarousel" role="button"
-                                            data-slide="next">
-                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                            <span class="sr-only">Next</span>
-                                        </a>
-                                    </div>
-                                </div>
+                                <p>Nueva Reforma is built on an unserviced tract of land given by the mayor to house
+                                    homeless people and displaced squatters (persons uprooted from housing they didn’t
+                                    have title to) and it was clear from the beginning that this was a precarious
+                                    situation. It requires much greater resources than we and our partners can come up
+                                    with in one or two years. The municipality contributed some technical assistance and
+                                    some construction materials, the community has been a showcase of volunteerism to do
+                                    almost all of the physical work, and we provided money for more materials beyond
+                                    what the City and residents could muster.</p>
+                                <p>While our initial efforts focused on raising the floor level of houses it became
+                                    increasingly clear that such a measure was NOT going to be a viable solution for the
+                                    community as a whole and our plans had to evolve. We are now helping the residents
+                                    build out their community to be fully serviced, by appropriate urban design
+                                    standards and building codes. Just like streets, sidewalks and other infrastructure,
+                                    stormwater management has to have a completed network to really function. Resilient
+                                    infrastructure depends on a system of BMPs, including smart landscaping,
+                                    interconnected walls and gutters to keep water out of the houses and provide safe
+                                    places to live for Nueva Reforma residents. </p>
+                                <p>This year we have supported five additional families to make changes/improvements in
+                                    their houses so they can have dry, safe places to live in and this action has a
+                                    positive impact on the community as a whole. However, there are dozens of homes in
+                                    Nueva Reforma still in need of assistance, that's why we remain committed to keeping
+                                    the progress moving. </p>
+                                <video width="100%" height="auto" controls>
+                                    <source src="/videos/flood_control_project.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                                <p>
+                                    This is just one example of a new, “at modern standard” wall being built to replace
+                                    “wall” that was a mix of stick and wattle (dried mud) and tin roofing. Now it's
+                                    complete, connected to the neighbors wall and will keep out storm water vastly
+                                    better than before.
+                                </p>
+                                <img src="/images/new_walls_flood_project.jpeg" width="50%" height="auto"
+                                    class="mr-3 pb-2 rounded" alt="what the newly funded walls look like">
                             </div>
                         </div>
                         <hr class="my-4">
